# libpetab-python

./: .ci_pip_reqs.txt  .coveragerc  .flake8  .pre-commit-config.yaml  .readthedocs.yaml  .rtd_pip_reqs.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  deploy.yml
doc/: conf.py  development.rst  documentation_data_format.rst  example.rst  index.rst  md2rst.py  modules.rst
doc/example/: distributions.ipynb  example_petablint.ipynb  example_visualization.ipynb  example_visualization_with_visspec.ipynb  example_visualization_without_visspec.ipynb
petab/: C.py  __init__.py  _utils.py  calculate.py  composite_problem.py  conditions.py  core.py  experiments.py  lint.py  mapping.py  measurements.py  migrations.py  observables.py  parameter_mapping.py  parameters.py  petablint.py  problem.py  sampling.py  sbml.py  simplify.py  simulate.py  timecourses.py  version.py  versions.py  yaml.py
petab/math/: PetabMathExprLexer.g4  PetabMathExprParser.g4  SympyVisitor.py  __init__.py  regenerate.sh  sympify.py
petab/models/: __init__.py  model.py  pysb_model.py  sbml_model.py
petab/schemas/: petab_schema.v1.0.0.yaml  petab_schema.v2.0.0.yaml
petab/sedml/: __init__.py  buildSEDML.py  changeObservableId.py  createExperimental.py  createMeasurement.py  createObservable.py  createParameters.py  createYaml.py  downloadSBML.py  downloadSEDML.py  extendSBML.py  getExperimentalData.py  getObservables.py  logging_util.py  petab2sedml.py  petabFolder.py  rearrangeExperimentalData.py  recreateExperimental.py  script_download_all_sedml_models.py  sedml2petab.py  sedml_import.py  simulatePetab.py  test_petab.py  test_sedml.py
petab/v1/: C.py  __init__.py  calculate.py  composite_problem.py  conditions.py  core.py  distributions.py  format_version.py  lint.py  mapping.py  measurements.py  observables.py  parameter_mapping.py  parameters.py  priors.py  problem.py  sampling.py  sbml.py  simplify.py  simulate.py  yaml.py
petab/v2/: C.py  __init__.py  _helpers.py  base.py  calculate.py  conditions.py  converters.py  core.py  experiments.py  lint.py  measurements.py  normalize.py  parameter_mapping.py  parameters.py  petab1to2.py  problem.py  sbml.py  simplify.py  yaml.py
petab/visualize/: __init__.py  cli.py  data_overview.py  helper_functions.py  lint.py  plot_data_and_simulation.py  plot_residuals.py  plotter.py  plotting.py  plotting_config.py
petab_MS/: C.py  __init__.py  calculate.py  lint.py  measurements.py  obcetive_function.py  observables.py  parameter_mapping.py  petablint.py  problem.py  sbml.py  simulate.py  yaml.py
petab_MS/visualize/: __init__.py  helper_functions.py
tests/: test_calculate.py  test_combine.py  test_conditions.py  test_deprecated.py  test_deprecation_warnings.py  test_experiments.py  test_lint.py  test_mapping.py  test_measurements.py  test_model_pysb.py  test_observables.py  test_parameter_mapping.py  test_parameters.py  test_petab.py  test_sbml.py  test_simplify.py  test_simulate.py  test_timecourses.py  test_version.py  test_visualization.py  test_visualization_data_overview.py  test_visualization_new_structure.py  test_yaml.py
tests/math/: math_tests.yaml  test_math.py
tests/v1/: test_calculate.py  (+21 more)
(+102 files in other folders)
