[build-system]
requires = [
    "setuptools>=62",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79
lint.extend-select = [
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20",  # flake8-print
    "W",  # pycodestyle Warnings
    "E",  # pycodestyle Errors
    "UP",  # pyupgrade
    # TODO: "ANN001", "D",  # pydocstyle (PEP 257)
]
lint.extend-ignore = ["F403", "F405", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
