[build-system]
requires = [
    "setuptools>=62",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "petab"
dynamic = ["version", "readme"]
description = "Parameter estimation tabular data"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.15.1",
    "pandas>=1.2.0",
    # remove when pandas >= 3, see also
    # https://github.com/pandas-dev/pandas/issues/54466
    "pyarrow",
    "python-libsbml>=5.17.0",
    "sympy",
    "colorama",
    "pyyaml",
    "jsonschema",
    "antlr4-python3-runtime==4.13.1",
]
license = {text = "MIT License"}
authors = [
    {name = "The PEtab developers"},
]
maintainers = [
    {name = "Daniel Weindl", email = "sci@danielweindl.de"},
    {name = "Dilan Pathirana", email = "dilan.pathirana@uni-bonn.de"},
    {name = "Maren Philipps", email = "maren.philipps@uni-bonn.de"},
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "simplesbml",
    "scipy",
    "pysb",
]
quality = [
    "pre-commit",
]
reports = [
    # https://github.com/spatialaudio/nbsphinx/issues/641
    "Jinja2==3.0.3",
]
combine = [
    "python-libcombine>=0.2.6",
]
doc = [
    "sphinx>=3.5.3, !=5.1.0",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-markdown-tables>=0.0.15",
    "sphinx-rtd-theme>=0.5.1",
    "m2r2",
    "myst-nb>=0.14.0",
    # https://github.com/spatialaudio/nbsphinx/issues/687#issuecomment-1339271312
    "ipython>=7.21.0, !=8.7.0",
    "pysb",
]
vis = [
    "matplotlib>=3.6.0",
    "seaborn",
    "scipy"
]

[project.scripts]
petablint = "petab.petablint:main"
petab_visualize = "petab.v1.visualize.cli:_petab_visualize_main"

[project.urls]
Repository = "https://github.com/PEtab-dev/libpetab-python"
Documentation = "https://petab.readthedocs.io/projects/libpetab-python/"

[tool.setuptools.packages.find]
include = ["petab", "petab.*"]
namespaces = false

[tool.setuptools.package-data]
petab = ["petab/schemas/*", "petab/visualize/templates/*"]

[tool.ruff]
line-length = 79
lint.extend-select = [
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20",  # flake8-print
    "W",  # pycodestyle Warnings
    "E",  # pycodestyle Errors
    "UP",  # pyupgrade
    # TODO: "ANN001", "D",  # pydocstyle (PEP 257)
]
lint.extend-ignore = ["F403", "F405", "S101"]
lint.exclude = [
    "petab/v1/math/_generated/*",  # auto-generated
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]

[tool.ruff.format]
exclude = [
    "petab/math/_generated/*",  # auto-generated
]
